--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,15 @@ docHomePage: /content-normalizer/introduction/
 
 introduction: /content-normalizer/introduction/
 programming: /content-normalizer/programming/
+parameters: /content-normalizer/parameters/
+
 c: /content-normalizer/programming/c/
 cpp: /content-normalizer/programming/cpp/
+c_cpp: /content-normalizer/programming/c-cplusplus/
+c_cpp_struct: /content-normalizer/programming/c-cplusplus/api-reference/struct/
+
+enumerations: /content-normalizer/parameters/enumerations/
+parameter_reference: /content-normalizer/paramters/reference/
 useVersionTree: true
 
 assets: /content-normalizer/assets/
