--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+repository: Dynamsoft/content-normalizer-docs
 repositoryUrl: https://github.com/Dynamsoft/content-normalizer-docs/blob/main
 docFullPath: https://www.dynamsoft.com/content-normalizer/
 firstLevelUrl: /content-normalizer
