--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -57,6 +57,7 @@ jobs:
           passive on
           binary
           put $dir_or_file
+          passive off
           close
           bye
           !
