--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -35,37 +35,55 @@ jobs:
       #    python3 /home/ubuntu/ftp.py /home/ubuntu/DCNDocPreview/_site/ ./www.dynamsoft.com/content-normalizer/ test
           
       # Runs a set of commands using the runners shell
-      - name: Upload to website
-        run: |
-          function uploaddirectory(){
-              for element in `ls $1`
-              do  
-                  dir_or_file=$1"/"$element
-                  if [ -d $dir_or_file ]
-                  then
-          ftp -p -n $2 $3<<!
-          user $4 $5
-          binary
-          mkdir $dir_or_file
-          close
-          bye
-          !
-                      uploaddirectory $dir_or_file $2 $3 $4 $5
-                  else
-          ftp -p -n $2 $3<<!
-          user $4 $5
-          binary
-          put $dir_or_file
-          close
-          bye
-          !
-                  fi  
-              done
-          }
-          cd /home/ubuntu
-          mkdir -p tempftp/www.dynamsoft.com/content-normalizer/tmp
-          cp -rfp /home/ubuntu/DCNDocPreview/_site/introduction/* /home/ubuntu/tempftp/www.dynamsoft.com/content-normalizer/tmp/
-          cd tempftp
-          uploaddirectory ./ officecn.dynamsoft.com 7500 WebsiteContentManage $user2_pwd
-          
-          
+      #- name: Upload to website
+      #  run: |
+      #    function uploaddirectory(){
+      #        for element in `ls $1`
+      #        do  
+      #            dir_or_file=$1"/"$element
+      #            if [ -d $dir_or_file ]
+      #            then
+      #    ftp -p -n $2 $3<<!
+      #    user $4 $5
+      #    binary
+      #    mkdir $dir_or_file
+      #    close
+      #    bye
+      #    !
+      #                uploaddirectory $dir_or_file $2 $3 $4 $5
+      #            else
+      #    ftp -p -n $2 $3<<!
+      #    user $4 $5
+      #    binary
+      #    put $dir_or_file
+      #    close
+      #    bye
+      #    !
+      #            fi  
+      #        done
+      #    }
+      #    cd /home/ubuntu
+      #    mkdir -p tempftp/www.dynamsoft.com/content-normalizer/tmp
+      #    cp -rfp /home/ubuntu/DCNDocPreview/_site/introduction/* /home/ubuntu/tempftp/www.dynamsoft.com/content-normalizer/tmp/
+      #    cd tempftp
+      #    uploaddirectory ./ officecn.dynamsoft.com 7500 WebsiteContentManage $user2_pwd
+      
+      
+      - name: ftp-action
+        # You may pin to the exact commit or the version.
+        # uses: sebastianpopp/ftp-action@eb75c5cb29d23ee4a729720a27dfb66403cb0f6d
+        uses: sebastianpopp/ftp-action@v2.0.0
+        with:
+          # FTP host
+          host: ${{ secrets.FTP_TEST_SITE_SERVER }}
+          # FTP user
+          user: WebsiteContentManage
+          # FTP password
+          password: ${{ secrets.FTP_TEST_SITE_PASSWORD }}
+          # Force SSL encryption
+          #forceSsl: # optional, default is false
+          # Local directory
+          localDir: /home/ubuntu/DCNDocPreview/_site/introduction/
+          # Remote directory
+          remoteDir: /www.dynamsoft.com/content-normalizer/tmp
+                
