--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -69,21 +69,52 @@ jobs:
       #    uploaddirectory ./ officecn.dynamsoft.com 7500 WebsiteContentManage $user2_pwd
       
       
-      - name: ftp-action
-        # You may pin to the exact commit or the version.
-        # uses: sebastianpopp/ftp-action@eb75c5cb29d23ee4a729720a27dfb66403cb0f6d
-        uses: sebastianpopp/ftp-action@v2.0.0
-        with:
-          # FTP host
-          host: ${{ secrets.FTP_TEST_SITE_SERVER }}
-          # FTP user
-          user: WebsiteContentManage
-          # FTP password
-          password: ${{ secrets.FTP_TEST_SITE_PASSWORD }}
-          # Force SSL encryption
-          #forceSsl: # optional, default is false
-          # Local directory
-          localDir: /home/ubuntu/DCNDocPreview/_site/introduction/
-          # Remote directory
-          remoteDir: /www.dynamsoft.com/content-normalizer/tmp
+#      - name: ftp-action
+#        # You may pin to the exact commit or the version.
+#        # uses: sebastianpopp/ftp-action@eb75c5cb29d23ee4a729720a27dfb66403cb0f6d
+#        uses: sebastianpopp/ftp-action@v2.0.0
+#        with:
+#          # FTP host
+#          host: ${{ secrets.FTP_TEST_SITE_SERVER }}
+#          # FTP user
+#          user: WebsiteContentManage
+#          # FTP password
+#          password: ${{ secrets.FTP_TEST_SITE_PASSWORD }}
+#          # Force SSL encryption
+#          #forceSsl: # optional, default is false
+#          # Local directory
+#          localDir: /home/ubuntu/DCNDocPreview/_site/introduction/
+#          # Remote directory
+#          remoteDir: /www.dynamsoft.com/content-normalizer/tmp/
                 
+      - name: FTP Deploy
+        # You may pin to the exact commit or the version.
+        # uses: SamKirkland/FTP-Deploy-Action@d2724c6194d42ae5d4d042070d51d23cbc6ad83f
+        uses: SamKirkland/FTP-Deploy-Action@4.1.0
+        with:
+          # ftp server
+          server: ${{ secrets.FTP_TEST_SITE_SERVER }}
+          # ftp username
+          username: WebsiteContentManage
+          # ftp password
+          password: ${{ secrets.FTP_TEST_SITE_PASSWORD }}
+          # Server port to connect to (read your web hosts docs)
+          #port: # optional
+          # protocol to deploy with - ftp, ftps, or ftps-legacy
+          #protocol: # optional
+          # Folder to upload from, must end with trailing slash /
+          local-dir: /home/ubuntu/DCNDocPreview/_site/introduction/
+          # Path to upload to on the server. Must end with trailing slash /
+          server-dir: /www.dynamsoft.com/content-normalizer/tmp/
+          # Path and name of the state file - this file is used to track which files have been deployed
+          #state-name: # optional
+          # Prints which modifications will be made with current config options, but doesnt actually make any changes
+          #dry-run: # optional
+          # Deletes ALL contents of server-dir, even items in excluded with exclude argument
+          #dangerous-clean-slate: # optional
+          # An array of glob patterns, these files will not be included in the publish/delete process
+          #exclude: # optional
+          # How verbose should the information be - minimal, standard, or verbose
+          #log-level: # optional
+          # strict or loose
+          #security: # optional
