--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -24,49 +24,49 @@ jobs:
       #- uses: actions/checkout@v2
 
       # Runs a set of commands using the runners shell
-      #- name: Run a multi-line script
-      #  run: |
-      #    cd /home/ubuntu
-      #    [ ! -d content-normalizer-docs-preview ] && git clone --depth 1 --branch preview https://github.com/Dynamsoft/content-normalizer-docs.git content-normalizer-docs-preview
-      #    [ ! -d DCNDocPreview ] && mkdir -p DCNDocPreview
-      #    cd content-normalizer-docs-preview && git pull && cd .. && cp -rfp ./content-normalizer-docs-preview/* ./DCNDocPreview/
-      #    cd Docs-Template-Repo && git pull && cd .. && cp -rfp ./Docs-Template-Repo/* ./DCNDocPreview/
-      #    cd DCNDocPreview && bundle exec jekyll build --incremental
-      #    python3 /home/ubuntu/ftp.py /home/ubuntu/DCNDocPreview/_site/ ./www.dynamsoft.com/content-normalizer/ test
-          
-      # Runs a set of commands using the runners shell
-      - name: Upload to website
+      - name: Run a multi-line script
         run: |
-          function uploaddirectory(){
-              for element in `ls $1`
-              do  
-                  dir_or_file=$1"/"$element
-                  if [ -d $dir_or_file ]
-                  then
-          ftp -p -n $2 $3<<!
-          user $4 $5
-          binary
-          mkdir $dir_or_file
-          close
-          bye
-          !
-                      uploaddirectory $dir_or_file $2 $3 $4 $5
-                  else
-          ftp -p -n $2 $3<<!
-          user $4 $5
-          binary
-          put $dir_or_file
-          close
-          bye
-          !
-                  fi  
-              done
-          }
-          cd /home/ubuntu
-          mkdir -p tempftp/www.dynamsoft.com/content-normalizer/tmp
-          cp -rfp /home/ubuntu/DCNDocPreview/_site/introduction/* /home/ubuntu/tempftp/www.dynamsoft.com/content-normalizer/tmp/
-          cd tempftp
-          uploaddirectory ./ officecn.dynamsoft.com 7500 WebsiteContentManage $user2_pwd
+          #cd /home/ubuntu
+          #[ ! -d content-normalizer-docs-preview ] && git clone --depth 1 --branch preview https://github.com/Dynamsoft/content-normalizer-docs.git content-normalizer-docs-preview
+          #[ ! -d DCNDocPreview ] && mkdir -p DCNDocPreview
+          #cd content-normalizer-docs-preview && git pull && cd .. && cp -rfp ./content-normalizer-docs-preview/* ./DCNDocPreview/
+          #cd Docs-Template-Repo && git pull && cd .. && cp -rfp ./Docs-Template-Repo/* ./DCNDocPreview/
+          #cd DCNDocPreview && bundle exec jekyll build --incremental
+          python3 /home/ubuntu/ftp.py /home/ubuntu/DCNDocPreview/_site/ ./www.dynamsoft.com/content-normalizer/ test
+          
+#      # Runs a set of commands using the runners shell
+#      - name: Upload to website
+#        run: |
+#          function uploaddirectory(){
+#              for element in `ls $1`
+#              do  
+#                  dir_or_file=$1"/"$element
+#                  if [ -d $dir_or_file ]
+#                  then
+#          ftp -p -n $2 $3<<!
+#          user $4 $5
+#          binary
+#          mkdir $dir_or_file
+#          close
+#          bye
+#          !
+#                      uploaddirectory $dir_or_file $2 $3 $4 $5
+#                  else
+#          ftp -p -n $2 $3<<!
+#          user $4 $5
+#          binary
+#          put $dir_or_file
+#          close
+#          bye
+#          !
+#                  fi  
+#              done
+#          }
+#          cd /home/ubuntu
+#          mkdir -p tempftp/www.dynamsoft.com/content-normalizer/tmp
+#          cp -rfp /home/ubuntu/DCNDocPreview/_site/introduction/* /home/ubuntu/tempftp/www.dynamsoft.com/content-normalizer/tmp/
+#          cd tempftp
+#          uploaddirectory ./ officecn.dynamsoft.com 7500 WebsiteContentManage $user2_pwd
       
       
 #      - name: ftp-action
