--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ c: /content-normalizer/programming/c/
 cpp: /content-normalizer/programming/cplusplus/
 c_cpp: /content-normalizer/programming/c-cplusplus/
 c_cpp_struct: /content-normalizer/programming/c-cplusplus/api-reference/struct/
+c_cpp_common_struct: /content-normalizer/programming/c-cplusplus/api-reference/struct/
 
 enumerations: /content-normalizer/parameters/enumerations/
 common_enumerations: /content-normalizer/parameters/enumerations/
