--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -87,34 +87,74 @@ jobs:
 #          # Remote directory
 #          remoteDir: /www.dynamsoft.com/content-normalizer/tmp/
                 
-      - name: FTP Deploy
-        # You may pin to the exact commit or the version.
-        # uses: SamKirkland/FTP-Deploy-Action@d2724c6194d42ae5d4d042070d51d23cbc6ad83f
-        uses: SamKirkland/FTP-Deploy-Action@4.1.0
-        with:
-          # ftp server
-          server: ${{ secrets.FTP_TEST_SITE_SERVER }}
-          # ftp username
-          username: WebsiteContentManage
-          # ftp password
-          password: ${{ secrets.FTP_TEST_SITE_PASSWORD }}
-          # Server port to connect to (read your web hosts docs)
-          port: 7500
-          # protocol to deploy with - ftp, ftps, or ftps-legacy
-          #protocol: # optional
-          # Folder to upload from, must end with trailing slash /
-          local-dir: /home/ubuntu/DCNDocPreview/_site/introduction/
-          # Path to upload to on the server. Must end with trailing slash /
-          server-dir: /www.dynamsoft.com/content-normalizer/tmp/
-          # Path and name of the state file - this file is used to track which files have been deployed
-          #state-name: # optional
-          # Prints which modifications will be made with current config options, but doesnt actually make any changes
-          #dry-run: # optional
-          # Deletes ALL contents of server-dir, even items in excluded with exclude argument
-          #dangerous-clean-slate: # optional
-          # An array of glob patterns, these files will not be included in the publish/delete process
-          #exclude: # optional
-          # How verbose should the information be - minimal, standard, or verbose
-          #log-level: # optional
-          # strict or loose
-          #security: # optional
+#      - name: FTP Deploy
+#        # You may pin to the exact commit or the version.
+#        # uses: SamKirkland/FTP-Deploy-Action@d2724c6194d42ae5d4d042070d51d23cbc6ad83f
+#        uses: SamKirkland/FTP-Deploy-Action@4.1.0
+#        with:
+#          # ftp server
+#          server: ${{ secrets.FTP_TEST_SITE_SERVER }}
+#          # ftp username
+#          username: WebsiteContentManage
+#          # ftp password
+#          password: ${{ secrets.FTP_TEST_SITE_PASSWORD }}
+#          # Server port to connect to (read your web hosts docs)
+#          port: 7500
+#          # protocol to deploy with - ftp, ftps, or ftps-legacy
+#          #protocol: # optional
+#          # Folder to upload from, must end with trailing slash /
+#          local-dir: /home/ubuntu/DCNDocPreview/_site/introduction/
+#          # Path to upload to on the server. Must end with trailing slash /
+#          server-dir: /www.dynamsoft.com/content-normalizer/tmp/
+#          # Path and name of the state file - this file is used to track which files have been deployed
+#          #state-name: # optional
+#          # Prints which modifications will be made with current config options, but doesnt actually make any changes
+#          #dry-run: # optional
+#          # Deletes ALL contents of server-dir, even items in excluded with exclude argument
+#          #dangerous-clean-slate: # optional
+#          # An array of glob patterns, these files will not be included in the publish/delete process
+#          #exclude: # optional
+#          # How verbose should the information be - minimal, standard, or verbose
+#          #log-level: # optional
+#          # strict or loose
+#          #security: # optional
+
+
+
+    - name: FTP Deployment
+      # You may pin to the exact commit or the version.
+      # uses: airvzxf/ftp-deployment-action@9efe025c218094bd451a0cb684d7cb471f4d9d4f
+      uses: airvzxf/ftp-deployment-action@latest
+      with:
+        # FTP Server.
+        server: ${{ secrets.FTP_TEST_SITE_SERVER }}
+        # FTP User.
+        user: WebsiteContentManage
+        # FTP Password.
+        password: ${{ secrets.FTP_TEST_SITE_PASSWORD }}
+        # Local directory.
+        local_dir: /home/ubuntu/DCNDocPreview/_site/introduction/
+        # Remote directory.
+        remote_dir: /www.dynamsoft.com/content-normalizer/tmp/
+        # Delete all the files inside of the remote directory.
+        #delete: # optional, default is false
+        # Times that the lftp will be executed if an error occurred.
+        #max_retries: # optional, default is 10
+        # Do not create symbolic links.
+        #no_symlinks: # optional, default is true
+        # FTP - Allow SSL encryption.
+        #ftp_ssl_allow: # optional, default is false
+        # FTP - FEAT: Determining what extended features the FTP server supports.
+        #ftp_use_feat: # optional, default is false
+        # FTP - Delay in seconds between NOOP commands when downloading tail of a file.
+        #ftp_nop_interval: # optional, default is 2
+        # NET - Maximum number of operation without success. 0 unlimited. 1 no retries.
+        #net_max_retries: # optional, default is 1
+        # NET - Ignore hard errors. When reply 5xx errors or there is too many users.
+        #net_persist_retries: # optional, default is 5
+        # NET - Sets the network protocol timeout.
+        #net_timeout: # optional, default is 15s
+        # DNS - 0 no limit trying to lookup an address otherwise try only this number of times.
+        #dns_max_retries: # optional, default is 8
+        # DNS - Time for DNS queries. Set to "never" to disable.
+        #dns_fatal_timeout: # optional, default is 10s
