--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -16,13 +16,24 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: self-hosted
+    #runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       #- uses: actions/checkout@v2
 
+    - uses: actions/checkout@v2
+    - name: Build the site in the jekyll/builder container
+      run: |
+        cd $GITHUB_WORKSPACE/../
+        [ ! -d Docs-Template-Repo ] && git clone --depth 1 --branch preview https://github.com/Dynamsoft/Docs-Template-Repo.git && cp -rfp ./Docs-Template-Repo/* $GITHUB_WORKSPACE
+        docker run \
+        -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
+        jekyll/builder:latest /bin/bash -c "chmod -R 777 /srv/jekyll && jekyll build --future"
+        
+        
       # Runs a set of commands using the runners shell
 #      - name: Run a multi-line script
 #        run: |
@@ -133,7 +144,7 @@ jobs:
         # FTP Password.
         password: ${{ secrets.FTP_TEST_SITE_PASSWORD }}
         # Local directory.
-        local_dir: /home/ubuntu/DCNDocPreview/_site/introduction/
+        local_dir: $GITHUB_WORKSPACE/_site/introduction/
         # Remote directory.
         remote_dir: /www.dynamsoft.com/content-normalizer/tmp/
         # Delete all the files inside of the remote directory.
