--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -80,23 +80,23 @@ jobs:
 #          uploaddirectory ./ officecn.dynamsoft.com 7500 WebsiteContentManage $user2_pwd
       
       
-#      - name: ftp-action
-#        # You may pin to the exact commit or the version.
-#        # uses: sebastianpopp/ftp-action@eb75c5cb29d23ee4a729720a27dfb66403cb0f6d
-#        uses: sebastianpopp/ftp-action@v2.0.0
-#        with:
-#          # FTP host
-#          host: ${{ secrets.FTP_TEST_SITE_SERVER }}
-#          # FTP user
-#          user: WebsiteContentManage
-#          # FTP password
-#          password: ${{ secrets.FTP_TEST_SITE_PASSWORD }}
-#          # Force SSL encryption
-#          #forceSsl: # optional, default is false
-#          # Local directory
-#          localDir: /home/ubuntu/DCNDocPreview/_site/introduction/
-#          # Remote directory
-#          remoteDir: /www.dynamsoft.com/content-normalizer/tmp/
+    - name: ftp-action
+      # You may pin to the exact commit or the version.
+      # uses: sebastianpopp/ftp-action@eb75c5cb29d23ee4a729720a27dfb66403cb0f6d
+      uses: sebastianpopp/ftp-action@v2.0.0
+      with:
+          # FTP host
+          host: ${{ secrets.FTP_TEST_SITE_SERVER }}
+          # FTP user
+          user: WebsiteContentManage
+          # FTP password
+          password: ${{ secrets.FTP_TEST_SITE_PASSWORD }}
+          # Force SSL encryption
+          #forceSsl: # optional, default is false
+          # Local directory
+          localDir: ./_site/introduction/
+          # Remote directory
+          remoteDir: /www.dynamsoft.com/content-normalizer/tmp/
                 
 #      - name: FTP Deploy
 #        # You may pin to the exact commit or the version.
