--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -25,14 +25,23 @@ jobs:
         
         
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          #cd /home/ubuntu
-          #[ ! -d content-normalizer-docs-preview ] && git clone --depth 1 --branch preview https://github.com/Dynamsoft/content-normalizer-docs.git content-normalizer-docs-preview
-          #[ ! -d DCNDocPreview ] && mkdir -p DCNDocPreview
-          #cd content-normalizer-docs-preview && git pull && cd .. && cp -rfp ./content-normalizer-docs-preview/* ./DCNDocPreview/
-          #cd Docs-Template-Repo && git pull && cd .. && cp -rfp ./Docs-Template-Repo/* ./DCNDocPreview/
-          #cd DCNDocPreview && bundle exec jekyll build --incremental
-          python3 /home/ubuntu/ftp.py /home/ubuntu/DCNDocPreview/_site/ ./www.dynamsoft.com/content-normalizer/ test
+#      - name: Run a multi-line script
+#        run: |
+#          #cd /home/ubuntu
+#          #[ ! -d content-normalizer-docs-preview ] && git clone --depth 1 --branch preview https://github.com/Dynamsoft/content-normalizer-docs.git content-normalizer-docs-preview
+#          #[ ! -d DCNDocPreview ] && mkdir -p DCNDocPreview
+#          #cd content-normalizer-docs-preview && git pull && cd .. && cp -rfp ./content-normalizer-docs-preview/* ./DCNDocPreview/
+#          #cd Docs-Template-Repo && git pull && cd .. && cp -rfp ./Docs-Template-Repo/* ./DCNDocPreview/
+#          #cd DCNDocPreview && bundle exec jekyll build --incremental
+#          python3 /home/ubuntu/ftp.py /home/ubuntu/DCNDocPreview/_site/ ./www.dynamsoft.com/content-normalizer/ test
           
+    - name: 📂 Sync files
+      uses: SamKirkland/FTP-Deploy-Action@4.1.0
+      with:
+        server: ${{ secrets.FTP_TEST_SITE_SERVER }}
+        username: WebsiteContentManage
+        password: ${{ secrets.FTP_TEST_SITE_PASSWORD }}
+        port: 7500 
+        local-dir: /home/ubuntu/DCNDocPreview/_site/
+        server-dir: /www.dynamsoft.com/content-normalizer/tmp/
 
