--- a/.github/workflows/full-site-build.yml
+++ b/.github/workflows/full-site-build.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI-Preview
+name: Full-Site-Build
 
 # Controls when the workflow will run
 on:
@@ -14,7 +14,8 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  Build-Preview:
+    if: ${{ github.ref == 'refs/heads/preview' }}
     # The type of runner that the job will run on
     runs-on: self-hosted
 
@@ -28,6 +29,7 @@ jobs:
       - name: Build the site
         run: |
           cd /home/ubuntu
+          [ -d DDNDocPreview ] && rm -rf DDNDocPreview
           [ ! -d document-normalizer-docs-preview ] && git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/document-normalizer-docs.git document-normalizer-docs-preview
           [ ! -d DDNDocPreview ] && mkdir -p DDNDocPreview
           cd document-normalizer-docs-preview && git pull && cd .. && cp -rfp ./document-normalizer-docs-preview/* ./DDNDocPreview/
