--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,14 @@ c_cpp: /document-normalizer/programming/c-cplusplus/
 c_cpp_struct: /document-normalizer/programming/c-cplusplus/api-reference/struct/
 c_cpp_common_struct: /document-normalizer/programming/c-cplusplus/api-reference/struct/common/
 
+ios: /document-normalizer/programming/objectivec-swift/
+ios_api: /document-normalizer/programming/objectivec-swift/api-reference/
+ios_release_notes: /document-normalizer/programming/objectivec-swift/release-notes/
+
+android: /document-normalizer/programming/android/
+android_api: /document-normalizer/programming/android/api-reference/
+android_release_notes: /document-normalizer/programming/android/release-notes/
+
 enumerations: /document-normalizer/parameters/enumerations/
 common_enumerations: /document-normalizer/parameters/enumerations/common/
 parameter_reference: /document-normalizer/parameters/reference/
