--- a/_data/full_tree.yml
+++ b/_data/full_tree.yml
@@ -3,6 +3,8 @@ tree_file_list:
     - sidelist-introduction.html
     - sidelist-parameters.html
     - sidelist-programming.html
+    - sidelist-programming/programming-android.html
+    - sidelist-programming/programming-ios.html
     - sidelist-programming/programming-c.html
     - sidelist-programming/programming-cpp.html
     - sidelist-parameters/parameters-enumerations.html
