--- a/_data/full_tree.yml
+++ b/_data/full_tree.yml
@@ -1,5 +1,6 @@
 tree_file_list:
     - sidelist-full-tree.html
+    - sidelist-introduction.html
     - sidelist-parameters.html
     - sidelist-programming.html
     - sidelist-programming/programming-android.html
