--- a/_data/full_tree.yml
+++ b/_data/full_tree.yml
@@ -3,6 +3,7 @@ tree_file_list:
     - sidelist-introduction.html
     - sidelist-parameters.html
     - sidelist-programming.html
+    - sidelist-release-notes.html
     - sidelist-programming/programming-android.html
     - sidelist-programming/programming-ios.html
     - sidelist-programming/programming-c.html
