--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,8 @@ sad_icon: /document-normalizer/docs/assets/img-icon/icon-sad.png
 
 baseurl: "/document-normalizer/docs"
 
+download: "/document-normalizer/downloads/1000021-confirmation/"
+
 plugins:
   - jemoji
   - jekyll-sitemap
