update build script

--- a/.github/workflows/full-site-build.yml
+++ b/.github/workflows/full-site-build.yml
@@ -30,9 +30,10 @@ jobs:
         run: |
           cd /home/ubuntu
           [ -d DDNDocPreview ] && rm -rf DDNDocPreview
-          [ ! -d document-normalizer-docs-preview ] && git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/document-normalizer-docs.git document-normalizer-docs-preview
-          [ ! -d DDNDocPreview ] && mkdir -p DDNDocPreview
-          cd document-normalizer-docs-preview && git pull && cd .. && cp -rfp ./document-normalizer-docs-preview/* ./DDNDocPreview/
+          [ -d document-normalizer-docs-preview ] && rm -rf document-normalizer-docs-preview
+          mkdir -p DDNDocPreview
+          git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/document-normalizer-docs.git document-normalizer-docs-preview
+          cp -rfp ./document-normalizer-docs-preview/* ./DDNDocPreview/
           cd Docs-Template-Repo && git pull && cd .. && cp -rfp ./Docs-Template-Repo/* ./DDNDocPreview/
           sed -i -e "1,3s/blob\/master$/blob\/preview/" \
           -e "1,3s/blob\/main$/blob\/preview/" /home/ubuntu/DDNDocPreview/_config.yml
