Updated license activation

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ docHomePage: /document-normalizer/docs/introduction/
 introduction: /document-normalizer/docs/introduction/
 programming: /document-normalizer/docs/programming/
 parameters: /document-normalizer/docs/parameters/
+license: /document-normalizer/docs/license/
 
 c: /document-normalizer/docs/programming/c/
 c_api: /document-normalizer/docs/programming/c/api-reference/
