--- a/_data/full_tree.yml
+++ b/_data/full_tree.yml
@@ -4,6 +4,7 @@ tree_file_list:
     - sidelist-parameters.html
     - sidelist-programming.html
     - sidelist-release-notes.html
+    - sidelist-license.html
     - sidelist-programming/programming-android.html
     - sidelist-programming/programming-ios.html
     - sidelist-programming/programming-c.html
