--- a/.github/workflows/full-site-build.yml
+++ b/.github/workflows/full-site-build.yml
@@ -30,14 +30,13 @@ jobs:
           cd /home/ubuntu
           [ -d DDNDoc ] && rm -rf DDNDoc
           [ ! -d DDNDoc ] && mkdir -p DDNDoc
-          [ -d document-normalizer-docs ] && rm -rf document-normalizer-docs
-          mkdir -p document-normalizer-docs
-          git clone --depth 1 --branch main https://github.com/dynamsoft-docs/document-normalizer-docs.git document-normalizer-docs
-          cp -rfp ./document-normalizer-docs/* ./DDNDoc/
-          cd Docs-Template-Repo && git pull && cd .. && cp -rfp ./Docs-Template-Repo/* ./DDNDoc/
+          [ ! -d document-normalizer-docs ] && git clone --depth 1 https://github.com/dynamsoft-docs/document-normalizer-docs.git document-normalizer-docs
+          [ ! -d Docs-Template-Repo-preview ] && git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo-preview
+          cd document-normalizer-docs && git pull && cd .. && cp -rfp ./document-normalizer-docs/* ./DDNDoc/
+          cd Docs-Template-Repo-preview && git pull && cd .. && cp -rfp ./Docs-Template-Repo-preview/* ./DDNDoc/
           cd DDNDoc && bundle exec jekyll build
           python3 /home/ubuntu/ftp.py /home/ubuntu/DDNDoc/_site/ ./www.dynamsoft.com/document-normalizer/docs/ prod
-          
+
   Build-Preview:
     if: ${{ github.ref == 'refs/heads/preview' }}
     # The type of runner that the job will run on
@@ -62,6 +61,17 @@ jobs:
           sed -i -e "1,3s/blob\/master$/blob\/preview/" \
           -e "1,3s/blob\/main$/blob\/preview/" /home/ubuntu/DDNDocPreview/_config.yml
           cd DDNDocPreview && bundle exec jekyll build #--incremental
+          
+          cd /home/ubuntu
+          [ -d DDNDocPreview ] && rm -rf DDNDocPreview
+          [ -d document-normalizer-docs-preview ] && rm -rf document-normalizer-docs-preview
+          [ ! -d DDNDocPreview ] && mkdir -p DDNDocPreview
+          [ ! -d document-normalizer-docs-preview ] && git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/document-normalizer-docs.git document-normalizer-docs-preview
+          cd document-normalizer-docs-preview && git pull && cd .. && cp -rfp ./document-normalizer-docs-preview/* ./DDNDocPreview/
+          cd Docs-Template-Repo-preview && git pull && cd .. && cp -rfp ./Docs-Template-Repo-preview/* ./DDNDocPreview/
+          sed -i -e "1,3s/blob\/master$/blob\/preview/" \
+          -e "1,3s/blob\/main$/blob\/preview/" /home/ubuntu/DDNDocPreview/_config.yml
+          cd DDNDocPreview && bundle exec jekyll build
 
           
       - name: Sync files
