--- a/_data/full_tree.yml
+++ b/_data/full_tree.yml
@@ -9,4 +9,5 @@ tree_file_list:
     - sidelist-programming/programming-ios.html
     - sidelist-programming/programming-c.html
     - sidelist-programming/programming-cpp.html
+    - sidelist-programming/programming-javascript.html
     - sidelist-parameters/parameters-reference.html
