--- a/_data/full_tree.yml
+++ b/_data/full_tree.yml
@@ -3,6 +3,7 @@ tree_file_list:
     - sidelist-introduction.html
     - sidelist-parameters.html
     - sidelist-programming.html
+    - sidelist-programming-v1.0.21.html
     - sidelist-useful.html
     - sidelist-release-notes.html
     - sidelist-license.html
@@ -10,6 +11,7 @@ tree_file_list:
     - sidelist-programming/programming-ios.html
     - sidelist-programming/programming-c.html
     - sidelist-programming/programming-cpp.html
+    - sidelist-programming/programming-cpp-v1.0.20.html
     - sidelist-programming/programming-xamarin.html
     - sidelist-programming/programming-javascript.html
     - sidelist-parameters/parameters-reference.html
