--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ release_notes: /document-normalizer/docs/core/release-notes/
 enumerations: /capture-vision/docs/core/enums/
 parameters: /capture-vision/docs/core/parameters/
 parameters_reference: /capture-vision/docs/core/parameters/reference/
+parameters_ddn: /document-normalizer/docs/core/parameters/
 parameters_reference_ddn: /document-normalizer/docs/core/parameters/reference/
 license: /capture-vision/docs/core/license/
 
