--- a/_data/full_tree.yml
+++ b/_data/full_tree.yml
@@ -7,6 +7,8 @@ tree_file_list:
     - sidelist-license.html
     - sidelist-parameters-organization.html
     - sidelist-parameters-reference.html
+    - sidelist-parameters-reference-v1.0.20.html
     - sidelist-release-notes.html
     - sidelist-useful.html
     - sidelist-understanding.html
+    - sidelist-understanding-v1.0.20.html
