--- a/_data/product_version.yml
+++ b/_data/product_version.yml
@@ -1,10 +1,12 @@
 version_info_list:
   - latest version
-  - 1.0.21
-  - 1.0.20
-  - 1.0.12
-  - 1.0.11
-  - 1.0.10
-  - 1.0.0
+  - value: 1.x
+    child:
+      - 1.0.21
+      - 1.0.20
+      - 1.0.12
+      - 1.0.11
+      - 1.0.10
+      - 1.0.0
 
   
